--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.10.1"
 kotlin = "2.0.21"
+kvcolorpicker-android = "2.2.0"
 room = "2.7.2"
 compose-bom = "2025.06.01"
 activity-compose = "1.10.1"
@@ -21,6 +22,7 @@ compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
+kvcolorpicker-android = { module = "com.github.KvColorPalette:KvColorPicker-Android", version.ref = "kvcolorpicker-android" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 
